feat: update launcher UI, core modules, and add new features (multiplayer, splash, stickers, offline skin)